--- a/templates/dhcpd.j2
+++ b/templates/dhcpd.j2
@@ -8,6 +8,8 @@ ignore client-updates;
 set vendorclass = option vendor-class-identifier;
 
 option pxe-system-type code 93 = unsigned integer 16;
+option dhcp-parameter-request-list 1,3,6,15,66,67,125;
+option option-125 code 125 = string;
 
 class "pxeclients" {
   match if substring (option vendor-class-identifier, 0, 9) = "PXEClient";
@@ -39,19 +41,26 @@ subnet {{ item.cidr | ipaddr('network') }} netmask {{ item.cidr | ipaddr('netmas
 {% if item.range is defined %}
   range                      {{ item.range }};
 {% endif %}
+  option tftp-server-name    "{{ item.tftp_server }}";
   default-lease-time         21600;
   max-lease-time             43200;
   next-server                {{ item.tftp_server }};
 }
 {% endfor %}
 
-group {
+
 {% for item in ztp_clients %}
-  host {{ item.hostname }}.{{ item.domain }} {
-    hardware ethernet {{ item.mac }};
-    fixed-address {{ item.cidr | ipaddr('address') }};
-    option host-name "{{ item.hostname }}.{{ item.domain }}";
-    filename "configs/{{ item.hostname }}.{{ item.domain }}";
-  }
+host {{ item.hostname }}.{{ item.domain }} {
+  hardware ethernet {{ item.mac }};
+  fixed-address {{ item.cidr | ipaddr('address') }};
+  option host-name "{{ item.hostname }}.{{ item.domain }}";
+  option bootfile-name "configs/{{ item.hostname }}.{{ item.domain }}";
+{% if item.ztp_profile is defined and ztp_profile[item.ztp_profile] is defined %}
+{% if ztp_profile[item.ztp_profile].type == 'cisco' %}
+  send option-125 {{ ztp_profile[item.ztp_profile].option }};
+{% endif %}
+{% endif %}
+  filename "configs/{{ item.hostname }}.{{ item.domain }}";
+ }
 {% endfor %}
-}
+
